--- a/src/css/home.css
+++ b/src/css/home.css
@@ -417,15 +417,301 @@
       margin-top: 2px;
 }
 
+.experiences-section{
+      padding: 100px 0;
+}
+
+.experiences-intro{
+       display: grid;
+       grid-template-columns: 1fr 1fr;
+       gap: 50px;
+       align-items: center;
+}
+.experiences-intro h2{
+      font-size: 60px;
+}
+
+.experiences-intro p{
+        font-size: 18px;
+        line-height: 1.6;
+        font-weight: 350;
+        color: var(--faded);
+}
+
+.experiences-intro a{
+      margin-top: 20px;
+      width: 200px;
+      height: 55px;
+      border: 2px solid var(--main-color);
+      border-radius: 6px;
+      -webkit-border-radius: 6px;
+      -moz-border-radius: 6px;
+      -ms-border-radius: 6px;
+      -o-border-radius: 6px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 16px;
+      gap: 5px;
+      color: var(--faded);
+}
+.experiences-intro a span{
+      display: flex;
+      margin-top: 2px;
+}
+
+.experiences-row{
+      margin-top: 50px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 40px;
+      width: 95%;
+      margin: 50px auto 0px auto;
+}
+
+.experience-moja img{
+        height: 400px;
+        border-radius: 20px;
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+        -ms-border-radius: 20px;
+        -o-border-radius: 20px;
+}
+
+.experience-moja .experience-text{
+       width: 90%;
+       margin: 20px auto;
+       display: flex;
+       align-items: center;
+       gap: 20px;
+}
+.experience-text-item{
+       border-right: 1px solid rgb(235, 235, 235);
+       padding-right: 20px;
+}
+
+.experience-moja h4{
+       font-size: 26px;
+       font-weight: 520;
+       margin-bottom: 10px;
+}
+
+.experience-moja p{
+       font-size: 16px;
+       line-height: 1.5;
+       color: var(--faded);
+}
+
+.experience-moja span{
+       color: var(--main-color);
+       font-size: 25px;
+       cursor: pointer;
+       width: 60px;
+       display: flex;
+       height: 60px;
+       align-items: center;
+       justify-content: center;
+}
+
+.process-section{
+      padding: 110px 0;
+      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../assets/processBg.jpg") no-repeat;
+      background-position: center;
+      background-size: cover;
+}
+
+.process-intro{
+      width: 850px;
+      margin: auto;
+      text-align: center;;
+}
+
+.process-intro h2{
+       color: whitesmoke;
+       font-size: 60px;
+       font-weight: 600;
+       margin-bottom: 10px;
+}
+
+.process-intro p{
+       color: gainsboro;
+       font-size: 18px;
+       line-height: 1.5;
+}
+
+.process-row{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        margin-top: 50px;
+        gap: 30px;
+}
+
+.safari-process-moja{
+      padding: 50px 30px;
+      backdrop-filter: blur(3px);
+      background: rgba(255, 255, 255, 0.189);
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
+}
 
 
+.safari-process-moja h3{
+       color: whitesmoke;
+       font-size: 25px;
+       font-weight: 400;
+       margin-bottom: 10px;
+       line-height: 1.5;
+}
+.safari-process-moja h3 span{
+       font-size: 32px;
+       font-weight: 600;
+}
+
+.safari-process-moja p{
+      line-height: 1.5;
+      color: whitesmoke;
+      font-weight: 250;
+      font-size: 16px;
+}
+
+.testimonials-section{
+      padding: 110px 0;
+}
+
+.testimonials-section-content h3{
+       text-transform: uppercase;
+       font-size: 15px;
+       font-weight: 500;
+       color: var(--main-color);
+}
+
+.testimonials-section-content h2{
+       font-size: 60px;
+       margin: 10px 0;
+       font-weight: 600;
+}
+
+.testimonials-row{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px;
+      margin: 50px 0;
+}
+.testimonial-moja{
+      padding: 40px;
+      box-shadow: 0px 0px 4px -2px gainsboro;
+      border-radius: 16px;
+      -webkit-border-radius: 16px;
+      -moz-border-radius: 16px;
+      -ms-border-radius: 16px;
+      -o-border-radius: 16px;
+}
+.testimonial-moja img{
+       width: 50px;
+       height: 50px;
+       border-radius: 50px;
+       -webkit-border-radius: 50px;
+       -moz-border-radius: 50px;
+       -ms-border-radius: 50px;
+       -o-border-radius: 50px;
+       margin-bottom: 20px;
+}
+.testimonial-moja p{
+      line-height: 1.4;
+      font-size: 15px;
+      margin-bottom: 10px;
+      color: var(--faded);
+}
+.testimonial-moja h4{
+      font-weight: 450;
+      font-size: 18px;
+}
 
 
+.partners-section h4{
+       font-size: 22px;
+       display: flex;
+       font-weight: 450;
+       flex-shrink: 0;
+}
+.partners-header span{
+       width: 100%;
+       display: flex;
+       height: 0.5px;
+       background: rgba(239, 236, 234, 0.712);
+}
+
+.partners-header{
+      display: flex;
+      align-items: center;
+      gap: 30px;
+}
+
+.partners-logos{
+      display: flex;
+      flex-wrap: wrap;
+      gap: 40px;
+      align-items: center;
+      justify-content: center;
+      margin-top: 40px;
+}
+.partners-logos img{
+       width: 180px;
+}
+
+.call-to-action{
+       padding: 140px 0;
+       background: url("../assets/callBG.jpg") no-repeat;
+       background-size: cover;
+       background-position: left;
+}
+.call-to-action-content{
+      display: flex;
+      position: relative;
+      justify-content: flex-end;
+}
 
 
-
-
-
+.call-action-box{
+       background: white;
+       width: 450px;
+       padding: 70px 50px;
+}
+.call-action-box h3{
+       text-transform: uppercase;
+       font-size: 15px;
+       font-weight: 500;
+       color: var(--main-color);
+}
+.call-action-box h2{
+       font-size: 50px;
+       font-weight: 600;
+       margin: 20px 0;
+}
+.call-action-box p{
+       line-height: 1.7;
+       font-size: 16px;
+       margin-bottom: 20px;
+       color: var(--faded);
+}
+.call-action-box a{
+      width: 180px;
+      height: 55px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: var(--main-color);
+      color: white;;
+      font-size: 15px;
+      gap: 5px;
+}
+.call-action-box a span{
+      display: flex;
+      margin-top: 2px;
+}
 
 @media(max-width: 1090px){
      .hero-texts{
@@ -438,13 +724,20 @@
            grid-template-columns: 1fr;
            gap: 10px;
      }
-     .about-section-wrap{
+     .about-section-wrap,
+     .experiences-intro{
           grid-template-columns: 1fr;
           gap: 20px;
      }
 
-     .destination-intro{
+     .destination-intro,
+     .process-intro{
             width: 90%;
+     }
+
+     .process-row,
+     .testimonials-row{
+            grid-template-columns: 1fr 1fr;
      }
 }
 
@@ -464,7 +757,10 @@
       }
 
       .about-section-column h2,
-      .destination-intro h2{
+      .destination-intro h2,
+      .experiences-intro h2,
+      .process-intro h2,
+      .testimonials-section-content h2{
                 font-size: 45px;
       }
 
@@ -497,6 +793,18 @@
 .destination-extra p{
         text-align: center;
 }
+.experiences-row,
+.process-row,
+.testimonials-row{
+        grid-template-columns: 1fr;
+        width: 100%;
+}
+.call-to-action-content{
+       justify-content: center;
+}
+.call-action-box{
+       width: 90%;
+}
 }
 @media(max-width: 540px){
       .hero-texts h1{
@@ -520,5 +828,11 @@
      
      .about-section-images img:nth-child(2){
             height: 300px;
+     }
+     .call-action-box h3{
+            font-size: 13px;
+     }
+     .call-action-box h2{
+            font-size: 40px;
      }
 }
